fix: add missing translations in french and english

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,17 @@
 en:
-  button_view_on_github: 'View on GitHub'
-  button_view_on_gitlab: 'View on GitLab'
+  button_view_on_github: View on GitHub
+  button_view_on_gitlab: View on GitLab
   text_git_mirror_url_note: URL of remote repository.
+  label_allow_users_to_change_url: Allow users to change URL (risky)
+  label_prevent_adding_same_remove_url_twice: Prevent adding same remote url twice
+  label_search_for_clones_in_all_url_schemes: Search for clones in all url schemes
+  label_permitted_url_schemes: Permitted url schemes
+  label_http_git_example: "http://site/project.git"
+  label_https_git_example: "https://site/project.git"
+  label_ssh_git_example: "ssh://site/project.git"
+  label_scp_git_example: "git@site:project.git"
+  label_hooks: Hooks
+  label_enable_gitlab_hook: Enable GitLab hook
+  label_gitlab_token: GitLab Token
+  label_enable_github_hook: Enable GitHub hook
+  label_github_secret_key: GitHub Secret Key
