--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  button_copy_clone_url: Copy clone URL
   button_view_on_github: View on GitHub
   button_view_on_gitlab: View on GitLab
   text_git_mirror_url_note: URL of remote repository.
