--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,5 @@
 fr:
+  button_copy_clone_url: "Copier l'URL de clone"
   button_view_on_github: 'Voir sur GitHub'
   button_view_on_gitlab: 'Voir sur GitLab'
   text_git_mirror_url_note: "Adresse de l'entrepôt distant."
